# rim-proyecto

./: .gitignore  CMakeLists.txt  README.md  calvin.py  create_descriptors.cpp  draw_good_matches.cpp  find_neighbours.cpp  find_neighbours_from_folder.cpp  xkcd.py
